# dynawo

./: .gitignore  DynawoHelicsJsonParser.py  README.md  myEnvDynawo.sh
.github/workflows/: nightly-release-windows.yml  release.yml
dynawo/: CMakeLists.txt
dynawo/sources/API/JOB/: JOBXmlImporter.cpp
dynawo/sources/Common/: DYNTimer.h
dynawo/sources/Common/Dictionaries/: DYNError_en_GB.dic  DYNTimeline_en_GB.dic  DYNTimeline_oppositeEvents.dic
dynawo/sources/Modeler/Common/: DYNConnectorCalculatedVariable.cpp  DYNModelMulti.cpp  DYNModeler.cpp  DYNModeler.h  DYNSubModelFactory.h
dynawo/sources/Modeler/ModelManager/: CMakeLists.txt  DYNModelManager.cpp  DYNModelManager.h  DYNModelManagerCommon.cpp  DYNModelManagerCommon.h
dynawo/sources/ModelicaCompiler/: PreloadCache.cmake.in  compileCppModelicaModelInDynamicLib.cmake.in
dynawo/sources/ModelicaCompiler/Scripts_OMC_1_13_2/: factory.py  readerOMC.py  utils.py
dynawo/sources/Models/CPP/ModelNetwork/: CMakeLists.txt  DYNModelBus.cpp  DYNModelBus.h  DYNModelNetwork.cpp  DYNModelNetwork.h
dynawo/sources/Models/Modelica/PreassembledModels/: AggregatedIBG.xml  CMakeLists.txt  LVRT.xml  (+20 more)
dynawo/sources/Simulation/: CMakeLists.txt  DYNSimulation.cpp  DYNSimulation.h
dynawo/sources/Solvers/AlgebraicSolvers/: DYNSolverKINEuler.cpp
dynawo/sources/Solvers/Common/: DYNSolverCommon.cpp  DYNSolverCommon.h
examples/DynaSwing/CIGRE_MV/: Cigre_MV.crv  Cigre_MV.dyd  Cigre_MV.iidm  Cigre_MV.jobs  Cigre_MV.par  Cigre_MV_PV_wind.dyd  Cigre_MV_PV_wind.iidm
examples/DynaSwing/IBG/: IBG.crv  IBG.dyd  IBG.jobs  IBG.par
examples/DynaSwing/IBG/AggregatedIBG/: AggregatedIBG.crv  AggregatedIBG.dyd  AggregatedIBG.jobs  AggregatedIBG.par
examples/DynaSwing/IBG/GenericIBG/: GenericIBG.crv  GenericIBG.dyd  GenericIBG.jobs  GenericIBG.par
examples/DynaSwing/IEEE39/IEEE39_Cosim/: Dynawo.json  IEEE39.dyd  IEEE39.par
examples/DynaSwing/IEEE39/IEEE39_Fault/: IEEE39.par
examples/DynaSwing/RBTS/: RBTS.crv  RBTS.dyd  RBTS.jobs  RBTS.par  RBTS.py  RBTS_ACOPF_100_L2_shunt_typical.iidm  RBTS_ACOPF_110_L2_shunt_typical.iidm  RBTS_ACOPF_120_L2_shunt_typical.iidm  RBTS_ACOPF_130_L2_shunt_typical.iidm  RBTS_ACOPF_140_L2_shunt_typical.iidm  RBTS_ACOPF_145_L2_shunt_typical.iidm  RBTS_ACOPF_160_L2_shunt_typical.iidm  RBTS_ACOPF_peak_L2_shunt_typical.iidm  RBTS_fin.jobs  RBTS_lowinertia.par
examples/DynaSwing/WECCWTG4ACurrentSource/: WECCWTG4A.crv
nrt/data/DynaSwing/: cases.py
util/: envDynawo.sh
util/curvesToHtml/csvToHtml/: csvToHtml.py
util/curvesToHtml/resources/: curves.js.in  curves_ref.js.in
(+167 files in other folders)
